# test-data-generator

./: .flake8  .gitignore  README.md  noxfile.py  pyproject.toml
.github/workflows/: test.yml
formats/: isonen.yml  sportsadmin.yml
test_data_generator/: __init__.py  cli.py  generate_file.py
test_data_generator/providers/: contestant_profile.py
tests/: test_cli.py
