[tool.poetry]
authors = ["Stig B. Dørmænen <stigbd@gmail.com>"]
description = ""
name = "test-data-generator"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
faker = "^21.0.0"
python = "^3.12"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
nox = "^2023.4.22"
nox-poetry = "^1.0.3"
black = "^23.12.0"

[tool.coverage.paths]
source = ["test_data_generator", "*/site-packages"]

[tool.coverage.run]
branch = false
source = ["test_data_generator"]

[tool.coverage.report]
fail_under = 100
omit = []
show_missing = true

[tool.mypy]
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict = false
warn_unreachable = true

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry.scripts]
test-data-generator = "test_data_generator.cli:cli"
